Add download apk button

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -15,6 +15,9 @@
                 <a href="https://play.google.com/store/apps/details?id={{ site.app.android_id }}">
                   <img class="centered download-buttons-store" src="images/assets/google_play.png">
                 </a>
+                <a href="https://github.com/TrustWallet/trust-wallet-android/releases/download/{{ site.app.apk_link }}/app-release.apk">
+                  <img class="centered download-buttons-store" src="images/assets/download_apk.png">
+                </a>
               </div>
             </div>
             
