Change APK download pic

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -16,7 +16,7 @@
                   <img class="centered download-buttons-store" src="images/assets/google_play.png">
                 </a>
                 <a href="https://github.com/TrustWallet/trust-wallet-android/releases/download/{{ site.app.apk_link }}/app-release.apk">
-                  <img class="centered download-buttons-store" src="images/assets/download_apk.png">
+                  <img class="centered download-buttons-store" src="images/assets/APK.png">
                 </a>
               </div>
             </div>
