--- a/themes/default/assets.html
+++ b/themes/default/assets.html
@@ -2,19 +2,38 @@
       <div class="row read">
         <h1>Download Assets</h1>
         <div class="col-sm-12"> 
-            <h3>Logos</h3>
+            <h2 class="assets-title">Logo</h2>
             <p><img width="300"src="images/assets/logo_solid_square_blue.png" /></p>
             
             <a href="images/assets/logo_solid_square_blue.png">png</a>
             <a href="images/assets/logo_solid_square_blue.svg">svg</a>
+
             <br /><br />
+
             <p><img width="300" src="images/assets/logo_solid_square_white.png" /></p>
-            
+
             <a href="images/assets/logo_solid_square_white.png">png</a>
             <a href="images/assets/logo_solid_square_white.svg">svg</a>
+
+        <div class="col-sm-12">
+            <h2 style="color: #555;">Brand Images</h2>
+            <div class="col-sm-6" >
+                <img class="assets-image" src="images/assets/logo_solid_side.png" />
+                <a href="images/assets/logo_solid_side.png">png</a>
+                <a href="images/assets/logo_solid_side.svg">svg</a>
+            </div>
+
+            <div class="col-sm-6">
+                <img class="assets-image" src="images/assets/logo_solid_side_dark.png" />
+                <a href="images/assets/logo_solid_side_dark.png">png</a>
+                <a href="images/assets/logo_solid_side_dark.svg">svg</a>
+            </div>
+
+<!--             <div class="col-sm-4">
+            </div> -->
         </div>
-        <div class="col-sm-12"> 
-            <h3>Brand images</h3>
+
+
         </div>
     </div>
 </div>
