--- a/themes/default/assets.html
+++ b/themes/default/assets.html
@@ -3,34 +3,41 @@
         <h1>Download Assets</h1>
         <div class="col-sm-12"> 
             <h2 class="assets-title">Logo</h2>
-            <p><img width="300"src="images/assets/logo_solid_square_blue.png" /></p>
-            
-            <a href="images/assets/logo_solid_square_blue.png">png</a>
-            <a href="images/assets/logo_solid_square_blue.svg">svg</a>
-
+            <div class="assets-container">
+            <div class="col-sm-6" >
+                <p><img width="300"src="images/assets/logo_solid_square_blue.png" /></p>
+                
+                <a href="images/assets/logo_solid_square_blue.png">png</a>
+                <a href="images/assets/logo_solid_square_blue.svg">svg</a>
+            </div>
             <br /><br />
 
-            <p><img width="300" src="images/assets/logo_solid_square_white.png" /></p>
+            <div class="col-sm-6">
+                <p><img width="300" src="images/assets/logo_solid_square_white.png" /></p>
 
-            <a href="images/assets/logo_solid_square_white.png">png</a>
-            <a href="images/assets/logo_solid_square_white.svg">svg</a>
+                <a href="images/assets/logo_solid_square_white.png">png</a>
+                <a href="images/assets/logo_solid_square_white.svg">svg</a>
+            </div>
 
         <div class="col-sm-12">
-            <h2 style="color: #555;">Brand Images</h2>
-            <div class="col-sm-6" >
+            <h2 class="assets-title">Brand Images</h2>
+            <div class="col-sm-4" >
                 <img class="assets-image" src="images/assets/logo_solid_side.png" />
                 <a href="images/assets/logo_solid_side.png">png</a>
                 <a href="images/assets/logo_solid_side.svg">svg</a>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <img class="assets-image" src="images/assets/logo_solid_side_dark.png" />
                 <a href="images/assets/logo_solid_side_dark.png">png</a>
                 <a href="images/assets/logo_solid_side_dark.svg">svg</a>
             </div>
 
-<!--             <div class="col-sm-4">
-            </div> -->
+            <div class="col-sm-4">
+                <img class="assets-image" src="images/assets/logo_solid_square_transparent.png" />
+                <a href="images/assets/logo_solid_square_transparent.png">png</a>
+                <a href="images/assets/logo_solid_square_transparent.svg">svg</a>       
+            </div>
         </div>
 
 
