--- a/themes/default/assets.html
+++ b/themes/default/assets.html
@@ -4,7 +4,7 @@
         <div class="col-sm-12"> 
             <h2 class="assets-title">Logo</h2>
             <div class="assets-container">
-            <div class="col-sm-6" >
+            <div class="col-sm-6 assets-container" >
                 <p><img width="300"src="images/assets/logo_solid_square_blue.png" /></p>
                 
                 <a href="images/assets/logo_solid_square_blue.png">png</a>
@@ -12,7 +12,7 @@
             </div>
             <br /><br />
 
-            <div class="col-sm-6">
+            <div class="col-sm-6 assets-container">
                 <p><img width="300" src="images/assets/logo_solid_square_white.png" /></p>
 
                 <a href="images/assets/logo_solid_square_white.png">png</a>
@@ -21,19 +21,19 @@
 
         <div class="col-sm-12">
             <h2 class="assets-title">Brand Images</h2>
-            <div class="col-sm-4" >
+            <div class="col-sm-4 assets-container" >
                 <img class="assets-image" src="images/assets/logo_solid_side.png" />
                 <a href="images/assets/logo_solid_side.png">png</a>
                 <a href="images/assets/logo_solid_side.svg">svg</a>
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-4 assets-container" >
                 <img class="assets-image" src="images/assets/logo_solid_side_dark.png" />
                 <a href="images/assets/logo_solid_side_dark.png">png</a>
                 <a href="images/assets/logo_solid_side_dark.svg">svg</a>
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-4 assets-container" >
                 <img class="assets-image" src="images/assets/logo_solid_square_transparent.png" />
                 <a href="images/assets/logo_solid_square_transparent.png">png</a>
                 <a href="images/assets/logo_solid_square_transparent.svg">svg</a>       
