--- a/themes/default/assets.html
+++ b/themes/default/assets.html
@@ -1,45 +1,54 @@
 <div class="container">
       <div class="row read">
         <h1>Download Assets</h1>
+
         <div class="col-sm-12"> 
             <h2 class="assets-title">Logo</h2>
-            <div class="assets-container">
-            <div class="col-sm-6 assets-container" >
-                <p><img width="300"src="images/assets/logo_solid_square_blue.png" /></p>
-                
+            <div class="col-sm-4 assets-container" >
+                <p><img width="200"src="images/assets/logo_solid_square_blue.png" /></p>
+                <div class="download-wrapper">
                 <a href="images/assets/logo_solid_square_blue.png">png</a>
                 <a href="images/assets/logo_solid_square_blue.svg">svg</a>
+                </div>
             </div>
-            <br /><br />
 
-            <div class="col-sm-6 assets-container">
-                <p><img width="300" src="images/assets/logo_solid_square_white.png" /></p>
-
+            <div class="col-sm-4 assets-container">
+                <p><img width="200" src="images/assets/logo_solid_square_white.png" /></p>
+                <div class="download-wrapper">
                 <a href="images/assets/logo_solid_square_white.png">png</a>
                 <a href="images/assets/logo_solid_square_white.svg">svg</a>
-            </div>
-
-        <div class="col-sm-12">
-            <h2 class="assets-title">Brand Images</h2>
-            <div class="col-sm-4 assets-container" >
-                <img class="assets-image" src="images/assets/logo_solid_side.png" />
-                <a href="images/assets/logo_solid_side.png">png</a>
-                <a href="images/assets/logo_solid_side.svg">svg</a>
-            </div>
-
-            <div class="col-sm-4 assets-container" >
-                <img class="assets-image" src="images/assets/logo_solid_side_dark.png" />
-                <a href="images/assets/logo_solid_side_dark.png">png</a>
-                <a href="images/assets/logo_solid_side_dark.svg">svg</a>
-            </div>
-
-            <div class="col-sm-4 assets-container" >
-                <img class="assets-image" src="images/assets/logo_solid_square_transparent.png" />
-                <a href="images/assets/logo_solid_square_transparent.png">png</a>
-                <a href="images/assets/logo_solid_square_transparent.svg">svg</a>       
+                </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="assets-title">Brand Images</h2>
+                <div class="col-6 col-md-4 assets-container" >
+                    <img class="assets-image" src="images/assets/logo_solid_side.png" />
+                    <div class="download-wrapper">
+                    <a class="assets-download" href="images/assets/logo_solid_side.png">png</a>
+                    <a class="assets-download" href="images/assets/logo_solid_side.svg">svg</a>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 assets-container" >
+                    <img class="assets-image" src="images/assets/logo_solid_side_dark.png" />
+                    <div class="download-wrapper">
+                    <a href="images/assets/logo_solid_side_dark.png">png</a>
+                    <a href="images/assets/logo_solid_side_dark.svg">svg</a>
+                    </div>
+                </div>
+
+                <div class="col-6 col-md-4 assets-container" >
+                    <img class="assets-image" src="images/assets/logo_solid_square_transparent.png" style="margin-left: 45px;"/>
+                    <div class="download-wrapper">
+                    <a href="images/assets/logo_solid_square_transparent.png">png</a>
+                    <a href="images/assets/logo_solid_square_transparent.svg">svg</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         </div>
     </div>
