Change faq title size

--- a/themes/default/faq.html
+++ b/themes/default/faq.html
@@ -3,7 +3,7 @@
 <body>
     <nav class="nav">
       <div class="nav-container">
-        <h2 style="color: #555;">Frequently Asked Questions</h2>
+        <h2 class="faq-title">Frequently Asked Questions</h2>
     </div>
   </nav>
 
