Add fintrux to partners

--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -127,6 +127,13 @@
                 </div>
               </a>
             </div>
+            <div class="col-sm-4 partner">
+              <a class ="partner-link" href="https://www.fintrux.com/">
+                <div class="img-container">
+                  <img src="images/partners/fintrux@2x.png" />
+                </div>
+              </a>
+            </div>
           </div>
       </div>
   </div>
