--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -24,10 +24,7 @@
             <div class="col-sm-4">
               <!-- App Screenshot(s) -->
               <div class="device {{ site.device }}">
-                <img
-                  class="app-screenshot"
-                  {% if site.app.screenshot %}src="{{ site.app.screenshot }}"{% endif %}
-                />
+                <img class="app-screenshot" src="images/tokens-app-screen.jpg" />
               </div>
             </div>
           </div>    
